<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login and SignUp ScreenDesign Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">설정</string>
    <string name="email">이메일 아이디</string>
    <string name="passowrd">비밀번호</string>
    <string name="login">로그인</string>
    <string name="show_pwd">비밀번호 보이기</string>
    <string name="hide_pwd">비밀번호 숨기기</string>
    <string name="forgot">비밀번호를 잊어버리셨나요?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">회원가입</string>
    <string name="fullName">이름</string>
    <string name="mobileNumber">휴대전화 번호</string>
    <string name="location">사는 곳</string>
    <string name="confirmPassword">비밀번호 확인</string>
    <string name="terms_conditions">이용약관 및 개인 정보 보호 정책에 동의합니다.</string>
    <string name="signUp">회원가입</string>
    <string name="already_user">로그인으로 돌아가기</string>
    <string name="registered_emailid">이메일 아이디를 입력하세요:</string>
    <string name="submit">다음</string>
    <string name="back">돌아가기</string>
    <string name="notice">공지사항</string>
    <string name="smart_building">Smart Building Application</string>
    <string name="IntelliS">IntelliS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Situm Maps Samples</string>
    <string name="search_placeholder">Search with Wayfinding</string>

    <!-- Samples: -->
    <string name="situm_sample_title_simple_map">Simple map</string>
    <string name="situm_sample_title_log_events">Log events</string>
    <string name="situm_sample_title_delegate_back_events">Delegate back events</string>
    <string name="situm_sample_title_library">Using SitumMapsLibrary</string>
    <string name="situm_sample_title_no_search_view">Remove Search View</string>
    <string name="situm_sample_title_dashboard_theme">Use theme from dashboard</string>
    <string name="situm_sample_title_interceptors">Intercept and customize requests</string>
    <string name="situm_sample_title_one_building_mode">One Building Mode</string>
    <string name="situm_sample_title_autostart_positioning">Start positioning automatically</string>
    <string name="situm_sample_title_customize_ui">Custom UI elements</string>



    <string name="selected_time">The time you picked will be shown here.</string>
    <string name="selected_date">The date you picked will be shown here.</string>
    <string name="selected_datetime">The date and time you picked will be shown here.</string>
    <string name="pick_time">Pick Time</string>
    <string name="pick_date">Pick Date</string>
    <string name="original_button">Framework Picker</string>
    <string name="pick_datetime">Pick Date+Time</string>
    <string name="mode_24_hours">Use 24 hour mode</string>
    <string name="mode_dark">Use dark theme</string>
    <string name="mode_custom_accent">Use custom accent</string>
    <string name="vibrate">Vibrate on touch</string>
    <string name="dismiss">Dismiss on pause (eg: orientation change)</string>
    <string name="title">Show a title</string>
    <string name="show_version_2">Use marshmallow layout</string>
    <string name="show_year_first">Show the year picker first</string>
    <string name="enable_seconds">Show seconds picker</string>
    <string name="enable_minutes">Show minutes picker</string>
    <string name="limit_times">Limit selectable times</string>
    <string name="limit_dates">Limit selectable dates</string>
    <string name="disable_dates">Disable specific dates</string>
    <string name="disable_times">Disable specific times</string>
    <string name="highlight_dates">Highlight certain dates</string>
    <string name="switch_orientation">Switch scroll orientation</string>
    <string name="default_selection">Use alternative default selection</string>

    <string name="tab_title_time">Time</string>
    <string name="tab_title_date">Date</string>
    <string name="tab_title_datetime">Date+Time</string>

    <!-- FCM -->
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="default_notification_channel_name" translatable="true">Notification</string>
</resources>